# finalfusion-python

./: .appveyor.yml  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  CONTRIBUTORS  Cargo.toml  MANIFEST.in  NOTICE  README.md  build_wheels.sh  default.nix  mypy.ini  setup.py  shell.nix
.github/workflows/: python.yml  pythonpublish-test.yml  pythonpublish.yml
docs/: conf.py  doc-requirements.txt  finalfusion.scripts.rst  index.rst  install.rst  quickstart.rst
docs/modules/: api.rst  finalfusion.embeddings.rst  finalfusion.io.rst  finalfusion.metadata.rst  finalfusion.norms.rst  re-exports.rst
docs/modules/compat/: finalfusion.compat.fasttext.rst  finalfusion.compat.rst  finalfusion.compat.text.rst  finalfusion.compat.word2vec.rst
docs/modules/storage/: finalfusion.storage.interface.rst  finalfusion.storage.ndarray.rst  finalfusion.storage.quantized.rst  finalfusion.storage.rst
docs/scripts/: finalfusion.scripts.ffp-convert.rst
examples/: print-embedding.py  print-metadata.py  similarity.py
finalfusion/tests/: conftest.py  embeddings.dims.txt  similarity-pq.fifu  test_analogy.py  test_embeddings.py  test_similarity.py  test_vocab.py
nix/: Cargo.nix  crates-io.nix  finalfusion-python.nix  rust-nightly.nix
src/: embeddings.rs  embeddings_wrap.rs  iter.rs  lib.rs  similarity.rs  storage.rs  subwords.rs  vocab.rs
src/finalfusion/: __init__.py  _util.py  embeddings.py  io.py  metadata.py  norms.py
src/fnv/: fnv.h
src/include/: portable_endian.h
tests/: conftest.py  conversion_integration.py  conversion_integration.sh  embeddings.fifu  embeddings.txt  subword.fifu  test_analogies.py  test_analogy.py  test_compat.py  test_embedding.py  test_embeddings.py  test_io.py  test_lossy.py  test_metadata.py  test_norms.py  test_similarity.py  test_storage.py  test_subword.py  test_subwords.py  test_test_setup.py  test_vocab.py
tests/data/: embeddings.w2v  pq-check.fifu  simple_vocab.fifu
tests/integration/: all.sh  analogy.sh  bucket_to_explicit.py  bucket_to_explicit.sh  check_select.py  conversion.py  conversion.sh  select.sh  select_buckets.txt  similarity.sh
(+38 files in other folders)
