[package]
name = "finalfusion-python"
version = "0.6.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "Finalfusion Python module"
documentation = "https://finalfusion.github.io/python"
homepage = "https://finalfusion.github.io/"
repository = "https://github.com/finalfusion/finalfusion-python.git"
license = "BlueOak-1.0.0"


[lib]
name = "finalfusion"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.8"
features = ["extension-module"]

[dependencies]
itertools = "0.8"
finalfusion = "0.11"
ndarray = "0.13"
numpy = "0.7"
toml = "0.5"

[package.metadata.maturin]
requires-dist = ["numpy"]
